--- a/sass/components/_filters-buttons.sass
+++ b/sass/components/_filters-buttons.sass
@@ -3,7 +3,6 @@
     align-items: center
     flex-wrap: wrap
     gap: rem(8px)
-    padding: 0 1.375rem
     margin-bottom: rem(15px)
 
     .filter__btn
