--- a/sass/pages/_new-invoice.sass
+++ b/sass/pages/_new-invoice.sass
@@ -115,7 +115,3 @@
 
         &:hover
             background-color: #e8e8e8
-
-    .form-control,
-    .form-select
-        border-radius: rem(4px)
